# hts-flow

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  htsflow.rst  index.rst  modules.rst
htsflow/: __init__.py  configure_funcs.py  process.py  process_engines.py  process_params.py  rascheduler.py  structures.py
htsflow/utils/: helpers.py
